--- a/hairfix/app/templates/about.html
+++ b/hairfix/app/templates/about.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HairFix - About Us</title>
+    <title>Surab Ali Hair Fixing - About Us</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -50,7 +50,7 @@
     <div class="container-fluid bg-light sticky-top p-0">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
             <a href="{% url 'index' %}" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>HairFix</h1>
+                <h1 class="mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fixing</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -107,9 +107,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="font-dancing-script text-primary">About HairFix</h1>
-                    <h1 class="mb-5">Why People Choose HairFix!</h1>
-                    <p class="mb-4">At HairFix, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques. We believe that great hair has the power to transform not just your look, but your entire day.</p>
+                    <h1 class="font-dancing-script text-primary">About Surab Ali Hair Fixing</h1>
+                    <h1 class="mb-5">Why People Choose Surab Ali Hair Fixing!</h1>
+                    <p class="mb-4">At Surab Ali Hair Fixing, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques. We believe that great hair has the power to transform not just your look, but your entire day.</p>
                     <div class="row g-3 mb-5">
                         <div class="col-sm-6">
                             <div class="bg-light text-center p-4">
@@ -234,12 +234,12 @@
             <div class="row g-5">
                 <div class="col-lg-6 pe-lg-5">
                     <a href="{% url 'index' %}" class="navbar-brand">
-                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>HairFix</h1>
+                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fixing</h1>
                     </a>
-                    <p>At HairFix, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques.</p>
+                    <p>At Surab Ali Hair Fixing, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques.</p>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+1 (555) 123-4567</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@hairfix.com</p>
+                    <p><i class="fa fa-envelope me-2"></i>info@Surab Ali Hair Fixing.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -286,10 +286,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">HairFix Salon</a>, All Right Reserved.
+                    &copy; <a class="border-bottom" href="#">Surab Ali Hair Fixing Salon</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="border-bottom">HTML Codex</a>
+                    Designed By <a class="border-bottom">TechiesInnovation</a>
                 </div>
             </div>
         </div>
