--- a/hairfix/app/templates/contact.html
+++ b/hairfix/app/templates/contact.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HairFix - Contact Us</title>
+    <title>Surab Ali Hair Fixing - Contact Us</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -148,7 +148,7 @@
                     <a href="{% url 'index' %}" class="navbar-brand">
                         <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fix</h1>
                     </a>
-                    <p>At HairFix, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques.</p>
+                    <p>At Surab Ali Hair Fixing, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques.</p>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Surab Ali Hair Fixing Center, Dubai, Dera Baniyas Road, Carlton Creek HOTEL, Shop No 8</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-2"></i><a href="tel:+971526774955" class="text-white-50">+971526774955</a></p>
                     <p><i class="fa fa-envelope me-2"></i><a href="mailto:surabalihairfixingcenterdubail@gmail.com" class="text-white-50">surabalihairfixingcenterdubail@gmail.com</a></p>
@@ -198,10 +198,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">HairFix Salon</a>, All Right Reserved.
+                    &copy; <a class="border-bottom" href="#">Surab Ali Hair Fixing Salon</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="border-bottom">HTML Codex</a>
+                    Designed By <a class="border-bottom">TechiesInnovation</a>
                 </div>
             </div>
         </div>
