--- a/hairfix/app/templates/index.html
+++ b/hairfix/app/templates/index.html
@@ -50,7 +50,7 @@
     <div class="container-fluid bg-light sticky-top p-0">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
             <a href="/" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fix</h1>
+                <h1 class="mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fixing</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -105,7 +105,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-12">
                                 <div class="d-flex align-items-center">
                                     <div class="btn-square btn btn-primary flex-shrink-0">
                                         <i class="fa fa-envelope text-dark"></i>
@@ -562,7 +562,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 pe-lg-5">
                     <a href="/" class="navbar-brand">
-                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fix</h1>
+                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fixing</h1>
                     </a>
                     <p>At HairFix, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques.</p>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Surab Ali Hair Fixing Center, Dubai, Dera Baniyas Road, Carlton Creek HOTEL, Shop No 8</p>
@@ -620,7 +620,7 @@
                     <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                     <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                     <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" >HTML Codex</a>
+                    Designed By <a class="border-bottom" >TechiesInnovation</a>
                 </div>
             </div>
         </div>
