--- a/hairfix/app/templates/price.html
+++ b/hairfix/app/templates/price.html
@@ -49,7 +49,7 @@
     <div class="container-fluid bg-light sticky-top p-0">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
             <a href="{% url 'index' %}" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fix</h1>
+                <h1 class="mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fixing</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -96,7 +96,7 @@
                 <div class="d-flex align-items-center h-100 bg-primary p-5">
                     <div class="wow fadeIn" data-wow-delay="0.3s">
                         <h1 class="font-dancing-script text-white">Pricing</h1>
-                        <h1 class="mb-0">Surab Ali Hair Fix</h1>
+                        <h1 class="mb-0">Surab Ali Hair Fixing</h1>
                         <h1 class="display-1 text-uppercase mb-5" style="letter-spacing: 10px;">Pricing</h1>
                         <div class="row g-4 align-items-center">
                             <div class="col-lg-6">
@@ -171,7 +171,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 pe-lg-5">
                     <a href="{% url 'index' %}" class="navbar-brand">
-                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fix</h1>
+                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fixing</h1>
                     </a>
                     <p>At HairFix, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques.</p>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Surab Ali Hair Fixing Center, Dubai, Dera Baniyas Road, Carlton Creek HOTEL, Shop No 8</p>
@@ -226,7 +226,7 @@
                     &copy; <a class="border-bottom" href="#">HairFix Salon</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="border-bottom">HTML Codex</a>
+                    Designed By <a class="border-bottom">TechiesInnovation</a>
                 </div>
             </div>
         </div>
