--- a/hairfix/app/templates/about.html
+++ b/hairfix/app/templates/about.html
@@ -101,7 +101,7 @@
                             <i class="fa fa-phone fa-2x text-dark"></i>
                         </div>
                         <div class="px-3">
-                            <h3>+1 (555) 123-4567</h3>
+                            <h3>+971526774955</h3>
                             <span>Call us direct 24/7 for a free hair consultation</span>
                         </div>
                     </div>
@@ -237,9 +237,9 @@
                         <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Surab Ali Hair Fixing</h1>
                     </a>
                     <p>At Surab Ali Hair Fixing, we're passionate about creating beautiful hairstyles that make you feel confident and beautiful. Our expert stylists are dedicated to providing exceptional service and staying current with the latest trends and techniques.</p>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+1 (555) 123-4567</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@Surab Ali Hair Fixing.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Surab Ali Hair Fixing Center, Dubai, Dera Baniyas Road, Carlton Creek HOTEL, Shop No 8</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+971526774955</p>
+                    <p><i class="fa fa-envelope me-2"></i>surabalihairfixingcenterdubail@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -286,10 +286,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Surab Ali Hair Fixing Salon</a>, All Right Reserved.
+                    &copy;  All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="border-bottom">TechiesInnovation</a>
+                                      Designed By <a class="border-bottom" target="_blank" href="https://sivavilasinscorp.com/" >Sivavilas Inscorp Services LLC</a>
                 </div>
             </div>
         </div>
