--- a/hairfix/app/templates/index.html
+++ b/hairfix/app/templates/index.html
@@ -614,13 +614,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">HairFix Salon</a>, All Right Reserved.
+                    &copy; All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                     <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                     <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" >TechiesInnovation</a>
+                    Designed By <a class="border-bottom" target="_blank" href="https://sivavilasinscorp.com/" >Sivavilas Inscorp Services LLC</a>
                 </div>
             </div>
         </div>
