--- a/hairfix/app/templates/price.html
+++ b/hairfix/app/templates/price.html
@@ -223,10 +223,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">HairFix Salon</a>, All Right Reserved.
+                    &copy; All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="border-bottom">TechiesInnovation</a>
+                            Designed By <a class="border-bottom" target="_blank" href="https://sivavilasinscorp.com/" >Sivavilas Inscorp Services LLC</a>
                 </div>
             </div>
         </div>
